[tool.poetry]
name = "yabte"
version = "0.3.5"
description = "Yet another backtesting engine"
authors = ["Blair Azzopardi <blairuk@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bsdz/yabte"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.10,<3.12"
pandas = "^1.5.2"
scipy = "^1.10.0"
pandas-stubs = "^2.0.0.230412"
mypy = "^1.3.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
black = {extras = ["jupyter"], version = "^23.1.0"}
docformatter = "^1.5.1"
coverage = "^7.2.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
sphinx-rtd-theme = "1.2.0rc4"

[tool.poetry.group.notebooks]
optional = true

[tool.poetry.group.notebooks.dependencies]
matplotlib = "^3.6.2"
ipykernel = "^6.20.2"
pyfeng = "^0.2.5"
nbconvert = "^7.2.9"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools==67.8.0", "mypy==1.3.0", "pandas-stubs==2.0.0.230412"]
build-backend = "poetry.core.masonry.api"
