[tool.poetry]
name = "yabte"
version = "0.4.0"
description = "Yet another backtesting engine"
authors = ["Blair Azzopardi <blairuk@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bsdz/yabte"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.10,<3.13"
pandas = ">1.5,<3"
scipy = "^1.10.0"
pandas-stubs = "^2.1.4.231227"
mypy = "^1.8.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
black = {extras = ["jupyter"], version = "^23.1.0"}
docformatter = "^1.5.1"
coverage = "^7.2.1"
setuptools = "^69.0.3"
pytest = "^8.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
sphinx-rtd-theme = "1.2.0rc4"
nbsphinx = "^0.9.3"
sphinx-gallery = "^0.14.0"
nbsphinx-link = "^1.3.0"

[tool.poetry.group.notebooks]
optional = true

[tool.poetry.group.notebooks.dependencies]
matplotlib = "^3.6.2"
plotly = "^5.10.0"
ipykernel = "^6.20.2"
pyfeng = "^0.2.5"
nbconvert = "^7.2.9"

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "plotly.*,scipy.*,matplotlib.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools==69.0.2", "mypy==1.8.0", "pandas-stubs==2.1.4.231227"]
build-backend = "poetry.core.masonry.api"
